--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -7,16 +6,17 @@
   <title>AI Bách Khoa Việt Nam – TEAM STORMBREAKERS</title>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background-color: #f5f7fa;
+      color: #333;
       text-align: center;
     }
     header {
       background-color: #2c3e50;
       color: white;
-      padding: 20px 10px;
+      padding: 30px 10px;
     }
     iframe {
       width: 100%;
@@ -25,15 +25,16 @@
     }
     footer {
       background-color: #ecf0f1;
-      padding: 10px;
+      padding: 12px;
       font-size: 14px;
+      color: #555;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>AI Bách Khoa Việt Nam</h1>
-    <p>Trợ lý tri thức bởi <strong>TEAM STORMBREAKERS</strong></p>
+    <p>Trợ lý tri thức chuẩn hóa – bởi <strong>TEAM STORMBREAKERS</strong></p>
   </header>
 
   <iframe 
